// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should decrypt note content via password 1`] = `
{
  "content": "#+ID: qweqwe
#+TITLE: Hello worlld

* Hello?",
  "encrypted": false,
  "encryptionType": "gpgPassword",
  "id": "id",
  "meta": {
    "headings": [
      {
        "level": 1,
        "title": "Hello?",
      },
    ],
    "id": "qweqwe",
    "title": "Hello worlld",
  },
}
`;

exports[`Should decrypt note via provided keys 1`] = `
{
  "content": "#+ID: qweqwe
#+TITLE: Hello worlld

* Hello?",
  "encrypted": false,
  "encryptionType": "gpgKeys",
  "id": "id",
  "meta": {
    "headings": [
      {
        "level": 1,
        "title": "Hello?",
      },
    ],
    "id": "qweqwe",
    "title": "Hello worlld",
  },
}
`;

exports[`Should encrypt note content via password 1`] = `
{
  "author": {
    "email": "test@mail.com",
    "id": "1",
    "name": "John Doe",
  },
  "encrypted": true,
  "encryptionType": "gpgPassword",
  "id": "id",
  "meta": {
    "id": undefined,
    "published": false,
  },
}
`;

exports[`Should encrypt note via keys 1`] = `
{
  "author": {
    "email": "test@mail.com",
    "id": "1",
    "name": "John Doe",
  },
  "encrypted": true,
  "encryptionType": "gpgKeys",
  "id": "id",
  "meta": {
    "id": undefined,
    "published": false,
  },
}
`;

exports[`Should encrypt note with empty encrypted property 1`] = `
{
  "author": {
    "email": "test@mail.com",
    "id": "1",
    "name": "John Doe",
  },
  "encrypted": true,
  "id": "id",
  "meta": {
    "id": undefined,
    "published": false,
  },
}
`;

exports[`Should not decrypt note without provided encrypted type 1`] = `
{
  "author": {
    "email": "test@mail.com",
    "id": "1",
    "name": "John Doe",
  },
  "content": "#+ID: qweqwe
#+TITLE: Hello worlld

* Hello?",
  "encrypted": false,
  "id": "id",
  "meta": {
    "description": "Awesome description",
    "images": [],
    "published": false,
    "title": "My note title",
  },
}
`;

exports[`Should not encrypt public note 1`] = `
{
  "author": {
    "email": "test@mail.com",
    "id": "1",
    "name": "John Doe",
  },
  "content": "#+ID: qweqwe
#+TITLE: Hello worlld

* Hello?",
  "encrypted": false,
  "encryptionType": "gpgPassword",
  "id": "id",
  "meta": {
    "description": "Awesome description",
    "images": [],
    "published": true,
    "title": "My note title",
  },
}
`;
